--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -62,49 +62,58 @@
             >
               <div
                 class="formData">
-                <label>Prénom</label><br>
+                <label for="first">Prénom</label><br>
                 <input
                   class="text-control"
                   type="text"
                   id="first"
                   name="first"
                   minlength="2"
+                  pattern="[A-Z][a-z]{1,99}"
+                  title="Le prénom commence par une majuscule et ne peut contenir que des lettres"
+                  required
                 /><br>
               </div>
               <div
                 class="formData">
-                <label>Nom</label><br>
+                <label for="last">Nom</label><br>
                 <input
                   class="text-control"
                   type="text"
                   id="last"
+                  minlength="2"
                   name="last"
+                  pattern="[A-Z][a-zA-Z ]{1,99}"
+                  title="Le nom commence par une majuscule et ne peut contenir que des lettres"
+                  required
                 /><br>
               </div>
               <div
                 class="formData">
-                <label>E-mail</label><br>
+                <label for="email">E-mail</label><br>
                 <input
                   class="text-control"
                   type="email"
                   id="email"
                   name="email"
+                  required
                 /><br>
               </div>
               <div
                 class="formData">
-                <label>Date de naissance</label><br>
+                <label for="birthdate">Date de naissance</label><br>
                 <input
                   class="text-control"
                   type="date"
                   id="birthdate"
                   name="birthdate"
+                  required
                 /><br>
               </div>
               <div
                 class="formData">
-                <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
-                <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
+                <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
+                <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99" pattern="[0-9]{,2}" required >
               </div>
               <p class="text-label">Quelle(s) ville(s) ?</p>
               <div
@@ -213,5 +222,6 @@
       </p>
     </footer>
     <script src="modal.js"></script>
+    <script src="verification.js"></script>
   </body>
 </html>
