--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <title>Reservation</title>
+    <title>Réservation</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="stylesheet" href="modal.css" />
+    <link rel="stylesheet" href="css/modal.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link
-      href="https://fonts.googleapis.com/css?family=DM+Sans"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=DM+Sans"/>
   </head>
   <body>
     <div class="topnav" id="myTopnav">
       <div class="header-logo">
-        <img alt="logo" src="Logo.png" width="auto" height="auto">
+        <img alt="logo" src="./img/Logo.png" width="auto" height="auto">
       </div>
       <div class="main-navbar">
         <a href="#" class="active"><span>Accueil</span></a>
@@ -35,7 +32,7 @@
             de jeux vidéos
           </h1>
           <p class="hero-text">
-            Vous aimez jouer ? Notre prochain évènement gaming est ouvert
+            Vous aimez jouer ? Notre prochain événement gaming est ouvert
             aux réservations... Places limitées !
           </p>
           <button class="btn-signup modal-btn">
@@ -43,7 +40,7 @@
           </button>
         </div>
         <div class="hero-img">
-          <img src="./bg_img.jpg" alt="img" />
+          <img src="./img/bg_img.jpg" alt="img" />
         </div>
         <button class="btn-signup modal-btn">
           je m'inscris
@@ -54,162 +51,100 @@
         <div class="content">
           <span id="close"></span>
           <div class="modal-body">
-            <form
-              name="reserve"
-              action="index.html"
-              method="get"
-              onsubmit="return validate();"
-            >
-              <div
-                class="formData">
+            <form id="formulaire" name="reserve" action="index.html" method="get" onsubmit="return validate();">
+              <div class="formData">
                 <label for="first">Prénom</label><br>
-                <input
-                  class="text-control"
-                  type="text"
-                  id="first"
-                  name="first"
-                  minlength="2"
-                  pattern="[A-Z][a-z]{1,99}"
-                  title="Le prénom commence par une majuscule et ne peut contenir que des lettres"
-                  required
-                /><br>
+                <!-- Entrée contrôlée par html5
+                <input class="text-control" type="text" id="first" name="first" minlength="2" pattern="[A-Z][a-z]{1,99}"
+                  title="Le prénom commence par une majuscule et ne peut contenir que des lettres" required />
+                -->
+                <input class="text-control" type="text" id="first" name="first" /><br>
+                <p id="erreurPrenom"></p>
               </div>
-              <div
-                class="formData">
+              <div class="formData">
                 <label for="last">Nom</label><br>
-                <input
-                  class="text-control"
-                  type="text"
-                  id="last"
-                  minlength="2"
-                  name="last"
-                  pattern="[A-Z][a-zA-Z ]{1,99}"
-                  title="Le nom commence par une majuscule et ne peut contenir que des lettres"
-                  required
-                /><br>
+                <!-- Entrée contrôlée par html5
+                <input class="text-control" type="text" id="last" minlength="2" name="last" pattern="[A-Z][a-zA-Z ]{1,99}"
+                  title="Le nom commence par une majuscule et ne peut contenir que des lettres" required />
+                -->
+                <input class="text-control" type="text" id="last" name="last" /><br>
+                <p id="erreurNom"></p>
               </div>
-              <div
-                class="formData">
+              <div class="formData">
                 <label for="email">E-mail</label><br>
-                <input
-                  class="text-control"
-                  type="email"
-                  id="email"
-                  name="email"
-                  required
-                /><br>
+                <!-- Entrée contrôlée par html5
+                <input class="text-control" type="email" id="email" name="email" required />
+                -->
+                <input class="text-control" type="email" id="email" name="email" /><br>
+                <p id="erreurEmail"></p>
               </div>
-              <div
-                class="formData">
+              <div class="formData">
                 <label for="birthdate">Date de naissance</label><br>
-                <input
-                  class="text-control"
-                  type="date"
-                  id="birthdate"
-                  name="birthdate"
-                  required
-                /><br>
+                <!-- Entrée contrôlée par html5
+                <input class="text-control" type="date" id="birthdate" name="birthdate" required />
+                -->
+                <input class="text-control" type="date" id="birthdate" name="birthdate" /><br>
+                <p id="erreurNaissance"></p>
               </div>
-              <div
-                class="formData">
+              <div class="formData">
                 <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
+                <!-- Entrée contrôlée par html5
                 <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99" pattern="[0-9]{,2}" required >
+                -->
+                <input type="number" class="text-control" id="quantity" name="quantity" >
+                <p id="erreurTournois"></p>
               </div>
-              <p class="text-label">Quelle(s) ville(s) ?</p>
-              <div
-                class="formData">
-                <input
-                  class="checkbox-input"
-                  type="checkbox"
-                  id="location1"
-                  name="location"
-                  value="New York"
-                />
+              <p class="text-label">Quelle ville ?</p>
+              <div class="formData">
+                <input class="checkbox-input" type="radio" id="location1" name="location" value="New York"/>
                 <label class="checkbox-label" for="location1">
                   <span class="checkbox-icon"></span>
-                  New York</label
-                >
-                <input
-                  class="checkbox-input"
-                  type="checkbox"
-                  id="location2"
-                  name="location"
-                  value="San Francisco"
-                />
+                  New York</label>
+                <input class="checkbox-input" type="radio" id="location2" name="location" value="San Francisco"/>
                 <label class="checkbox-label" for="location2">
                   <span class="checkbox-icon"></span>
-                  San Francisco</label
-                >
-                <input
-                  class="checkbox-input"
-                  type="checkbox"
-                  id="location3"
-                  name="location"
-                  value="Seattle"
-                />
+                  San Francisco</label>
+                <input class="checkbox-input" type="radio" id="location3" name="location" value="Seattle"/>
                 <label class="checkbox-label" for="location3">
                   <span class="checkbox-icon"></span>
-                  Seattle</label
-                >
-                <input
-                  class="checkbox-input"
-                  type="checkbox"
-                  id="location4"
-                  name="location"
-                  value="Chicago"
-                />
+                  Seattle</label>
+                <input class="checkbox-input" type="radio" id="location4" name="location" value="Chicago"/>
                 <label class="checkbox-label" for="location4">
                   <span class="checkbox-icon"></span>
-                  Chicago</label
-                >
-                <input
-                  class="checkbox-input"
-                  type="checkbox"
-                  id="location5"
-                  name="location"
-                  value="Boston"
-                />
+                  Chicago</label>
+                <input class="checkbox-input" type="radio" id="location5" name="location" alue="Boston"/>
                 <label class="checkbox-label" for="location5">
                   <span class="checkbox-icon"></span>
-                  Boston</label
-                >
-                <input
-                  class="checkbox-input"
-                  type="checkbox"
-                  id="location6"
-                  name="location"
-                  value="Portland"
-                />
+                  Boston</label>
+                <input class="checkbox-input" type="radio" id="location6" name="location" value="Portland"/>
                 <label class="checkbox-label" for="location6">
                   <span class="checkbox-icon"></span>
-                  Portland</label
-                >
+                  Portland</label>
+                <br>
+								<p id="erreurVille"></p>
               </div>
 
-              <div
-                class="formData">
-                <input
-                  class="checkbox-input"
-                  type="checkbox"
-                  id="checkbox1"
-                />
-                <label class="checkbox2-label" for="checkbox1" required>
+              <div class="formData">
+                <input class="checkbox-input" type="checkbox" id="checkboxConditions"/>
+                <label class="checkbox2-label" for="checkboxConditions" required>
                   <span class="checkbox-icon"></span>
                   J'ai lu et accepté les conditions d'utilisation.
                 </label>
                 <br>
-                <input class="checkbox-input" type="checkbox" id="checkbox2" />
-                <label class="checkbox2-label" for="checkbox2">
+                <p id="erreurConditions"></p>
+                <input class="checkbox-input" type="checkbox" id="checkboxAbonnement" />
+                <label class="checkbox2-label" for="checkboxAbonnement">
                   <span class="checkbox-icon"></span>
                   Je souhaite être prévenu des prochains évènements.
                 </label>
                 <br>
               </div>
               <input
+                id="valider";
                 class="btn-submit"
                 type="submit"
-                class="button"
                 value="C'est parti"
+                onclick="validerFormulaire()"
               />
             </form>
           </div>
@@ -221,7 +156,7 @@
         Copyright 2014 - 2020, GameOn Inc.
       </p>
     </footer>
-    <script src="modal.js"></script>
-    <script src="verification.js"></script>
+    <script src="./js/modal.js"></script>
+    <script src="./js/verifications.js"></script>
   </body>
 </html>
