--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -5,13 +5,13 @@
     <title>Réservation</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="stylesheet" href="css/modal.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=DM+Sans"/>
   </head>
   <body>
     <div class="topnav" id="myTopnav">
       <div class="header-logo">
-        <img alt="logo" src="./img/Logo.png" width="auto" height="auto">
+        <img alt="logo" src="./img/Logo.png" >
       </div>
       <div class="main-navbar">
         <a href="#" class="active"><span>Accueil</span></a>
@@ -19,13 +19,13 @@
         <a href="#"><span>À propos</span></a>
         <a href="#"><span>Contact</span></a>
         <a href="#"><span>Évènements passés</span></a>
-        <a href="javascript:void(0);" class="icon" onclick="editNav()">
+        <a href="#" class="icon">
           <i class="fa fa-bars"></i>
         </a>
       </div>
     </div>
     <main>
-      <div class="hero-section">
+      <div class="hero-section" id="pageHero">
         <div class="hero-content">
           <h1 class="hero-headline">
             Marathon national<br>
@@ -51,7 +51,7 @@
         <div class="content">
           <span id="close"></span>
           <div class="modal-body">
-            <form id="formulaire" name="reserve" action="index.html" method="get" onsubmit="return validate();">
+            <form id="formulaire" name="reserve" action="index.html" method="get">
               <div class="formData">
                 <label for="first">Prénom</label><br>
                 <!-- Entrée contrôlée par html5
@@ -112,7 +112,7 @@
                 <label class="checkbox-label" for="location4">
                   <span class="checkbox-icon"></span>
                   Chicago</label>
-                <input class="checkbox-input" type="radio" id="location5" name="location" alue="Boston"/>
+                <input class="checkbox-input" type="radio" id="location5" name="location" value="Boston"/>
                 <label class="checkbox-label" for="location5">
                   <span class="checkbox-icon"></span>
                   Boston</label>
@@ -126,7 +126,7 @@
 
               <div class="formData">
                 <input class="checkbox-input" type="checkbox" id="checkboxConditions"/>
-                <label class="checkbox2-label" for="checkboxConditions" required>
+                <label class="checkbox2-label" for="checkboxConditions" >
                   <span class="checkbox-icon"></span>
                   J'ai lu et accepté les conditions d'utilisation.
                 </label>
@@ -140,20 +140,19 @@
                 <br>
               </div>
               <input
-                id="valider";
+                id="valider"
                 class="btn-submit"
                 type="submit"
                 value="C'est parti"
-                onclick="validerFormulaire()"
               />
             </form>
           </div>
         </div>
       </div>
     </main>
-    <footer>
+    <footer id="myFooter">
       <p class="copyrights">
-        Copyright 2014 - 2020, GameOn Inc.
+        Copyright 2014 - 2021, GameOn Inc.
       </p>
     </footer>
     <script src="./js/modal.js"></script>
