Modifs mineures (accessibilité, etc.)

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -94,8 +94,8 @@
                 <input type="number" class="text-control" id="quantity" name="quantity" >
                 <p id="erreurTournois"></p>
               </div>
-              <p class="text-label">Quelle ville ?</p>
-              <div class="formData">
+              <fieldset class="formData">
+                <legend class="text-label">Quelle ville ?</legend>
                 <input class="checkbox-input" type="radio" id="location1" name="location" value="New York"/>
                 <label class="checkbox-label" for="location1">
                   <span class="checkbox-icon"></span>
@@ -122,7 +122,7 @@
                   Portland</label>
                 <br>
 								<p id="erreurVille"></p>
-              </div>
+              </fieldset>
 
               <div class="formData">
                 <input class="checkbox-input" type="checkbox" id="checkboxConditions"/>
